<resources>
    <string name="app_name">WeatherApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_icon">add icon</string>
    <string name="weather">Погода</string>
    <string name="celsius">℃</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="link"><![CDATA[Подробнее >]]></string>
    <string name="five_day_forecast">Прогноз на 5 дней</string>
    <string name="feels_like">Ощущается</string>
    <string name="rain_probability">Вероятность дождя</string>
    <string name="wind_speed">Скорость ветра</string>
    <string name="description">Описание</string>
    <string name="precipitation">Осадки</string>
    <string name="wind_direction">Направление</string>
    <string name="accuweather">Данные предоставлены AccuWeather</string>
    <string name="today_weather_icon">Today weather icon</string>
    <string name="wind_template">%s %s</string>
    <string name="temp_template">%s° / %s°</string>
    <string name="fahrenheit">℉</string>
    <string name="degrees">%s°</string>
    <string name="icon_info_template"> %s \n %s</string>
    <string name="icon_today_template">Сегодня \n %s</string>
    <string name="icon_tomorrow_template">Завтра \n %s</string>
    <string name="metrics">Система измерения</string>
    <string name="icon_description">Иконка погоды</string>
</resources>