<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.WeatherApp"
    android:background="@drawable/sky"
    tools:context=".presentation.fragments.WeatherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <RelativeLayout
            android:id="@+id/weather_toolbar"
            style="@style/Widget.Material3.ActionBar.Solid"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white">

            <ImageView
                android:contentDescription="@string/add_icon"
                android:id="@+id/add"
                android:paddingEnd="0dp"
                android:paddingStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_add" />
            <TextView
                android:id="@+id/toolbar_title"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"/>

            <ImageButton
                android:id="@+id/popup_menu"
                android:paddingEnd="16dp"
                android:paddingStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_menu_popup" />

        </RelativeLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="64dp"
            android:layout_margin="8dp"
            android:id="@+id/current_temp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/weather_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:id="@+id/current_temp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle=""
                android:textSize="112sp"
                android:textColor="@color/white" />
            <TextView
                android:layout_marginTop="28dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celcius"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/current_temp" />
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/current_temp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <RelativeLayout
            android:padding="8dp"
            android:id="@+id/weather_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/link"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/weather_1"
                android:id="@+id/today_weather_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/today_weather_icon"/>

            <TextView
                android:id="@+id/today_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/today_weather_icon"
                android:text="@string/today"
                android:textSize="20sp" />
            <ImageView
                android:src="@drawable/weather_1"
                android:id="@+id/tomorrow_weather_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/today_weather_icon"
                android:contentDescription="@string/today_weather_icon"/>

            <TextView
                android:id="@+id/tomorrow_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/today_weather"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/tomorrow_weather_icon"
                android:text="@string/tomorrow"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/third_day_weather_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tomorrow_weather_icon"
                android:contentDescription="@string/today_weather_icon"
                android:src="@drawable/weather_1" />
            <TextView
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:id="@+id/third_day_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/third_day_weather_icon"
                android:layout_below="@id/tomorrow_weather"
                />
            <TextView
                android:layout_marginTop="4dp"
                android:textSize="20sp"
                android:id="@+id/today_weather_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>
            <TextView
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:id="@+id/tomorrow_weather_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/today_weather_temp"/>
            <TextView
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:id="@+id/third_day_weather_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/tomorrow_weather_temp"
                />


        </RelativeLayout>
        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link"
            app:layout_constraintTop_toBottomOf="@id/current_temp_layout"
            app:layout_constraintBottom_toTopOf="@id/weather_list"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/five_days_forecast"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/weather_list"
            android:text="@string/five_day_forecast" />




        <com.google.android.material.card.MaterialCardView

            android:id="@+id/info_card"
            android:clickable="true"
            android:focusable="true"
            android:checkable="false"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/five_days_forecast"
            android:layout_width="match_parent"
            android:background="@color/gblue"
            android:layout_height="wrap_content">




            <RelativeLayout
                android:background="@color/gblue"
                android:backgroundTint="@color/gblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/sun_rise"
                    android:layout_width="match_parent"
                    android:layout_height="75dp" >
                    <app.futured.donut.DonutProgressView
                        android:id="@+id/sun_rise_bar"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:donut_bgLineColor="@color/white"
                        app:donut_gapWidth="260"
                        app:donut_strokeWidth="2dp" />
                </LinearLayout>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sun_rise_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="0dp"
                    android:paddingStart="20dp"
                    android:layout_below="@id/sun_rise"
                    android:layout_alignParentStart="true" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sun_set_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="20dp"
                    android:layout_below="@id/sun_rise"
                    android:layout_alignParentEnd="true" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/temp_feels_like"
                    android:text="@string/feels_like"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/sun_rise_time"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/temp_feels_like_value"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/temp_feels_like"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/rain_probability"
                    android:text="@string/rain_probability"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/temp_feels_like_value"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/rain_probability_value"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/rain_probability"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/wind_speed"
                    android:text="@string/wind_speed"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/rain_probability_value"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/wind_speed_value"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/wind_speed"/>


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/feeling_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sun_set_time"
                    android:layout_alignParentEnd="true"
                    android:text="@string/description"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/feeling_description_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/feeling_description"
                    android:layout_alignParentEnd="true"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/precipitation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/feeling_description_value"
                    android:layout_alignParentEnd="true"
                    android:text="@string/precipitation"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/precipitation_value"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/precipitation"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/wind_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/precipitation_value"
                    android:layout_alignParentEnd="true"
                    android:text="@string/wind_direction"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/wind_direction_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/wind_direction"
                    android:layout_alignParentEnd="true"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />


            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/info_card"
            android:text="@string/accuweather"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>